[gd_scene load_steps=3 format=3 uid="uid://b3npivrhhyof2"]

[ext_resource type="Script" uid="uid://c4y2mnkhluub6" path="res://scenes/ui/main_menu.gd" id="1_atwtb"]
[ext_resource type="FontFile" uid="uid://cpt2tglodw1ic" path="res://fonts&style/Exo-VariableFont_wght.ttf" id="2_kukwc"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_atwtb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -7.393
anchor_top = -6.284
offset_left = -319.28
offset_top = -86.64
offset_right = 785.0
offset_bottom = 489.0
color = Color(0.431373, 1, 1, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SaveInfoLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kukwc")
text = "Save: None"

[node name="ContinueButton" type="Button" parent="MenuContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_kukwc")
theme_override_font_sizes/font_size = 24
text = "Continue"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_kukwc")
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="SaveButton" type="Button" parent="MenuContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_kukwc")
theme_override_font_sizes/font_size = 24
text = "Save"

[node name="LoadButton" type="Button" parent="MenuContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_kukwc")
theme_override_font_sizes/font_size = 24
action_mode = 0
text = "Load"

[node name="RestartButton" type="Button" parent="MenuContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_kukwc")
theme_override_font_sizes/font_size = 24
text = "Restart"

[connection signal="pressed" from="MenuContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MenuContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MenuContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MenuContainer/RestartButton" to="." method="_on_restart_button_pressed"]
